[tool.poetry]
name = "oh-schd"
version = "0.1.0"
description = ""
authors = ["higger <matt.higger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.1.1"
scipy = "^1.14.1"
icalendar = "^5.0.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
